# AI_lawyer_backend

./: .dockerignore  .env.example  .gitignore  AI_Lawyer_Architecture.md  BACKEND_COMPLETION_ANALYSIS.md  DEPLOYMENT.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README.md  THAI_SUMMARY.md  __init__.py  ai_lawyer_database.sql  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  skills-lock.json  supabase_admin_ingestion_jobs.sql  supabase_agentic_rag_chunks.sql  supabase_lao_law_categories.sql  supabase_lao_legal_metadata.sql  supabase_migration.sql  workers.py
agents/: base_agent.py  document_agent.py  evidence_agent.py  reasoning_agent.py  research_agent.py  risk_strategy_agent.py  verification_agent.py
api/: admin.py  admin_compat.py  analytics.py  auth.py  billing.py  dashboard.py  dependencies.py  documents.py  evaluation.py  evidence.py  feedback.py  knowledge.py  legal.py  memory.py  schemas.py  upload_utils.py  users.py
core/: config.py  database.py  exceptions.py  jurisdiction.py  logging.py  security.py
evaluation/: __init__.py  lao_eval_seed.json  lao_retrieval_benchmark.json  retrieval_benchmark.py
memory/: case_memory.py  session_memory.py
middleware/: __init__.py  rate_limiter.py
orchestrator/: agent_selector.py  context_builder.py  legal_intent_router.py  query_classifier.py  workflow_manager.py
rag/: agentic_planner.py  context_assembler.py  embedder.py  graph_expander.py  legal_query_analyzer.py  legal_text_matching.py  reranker.py  (+1 more)
(+21 files in other folders)
